added testimonials, finished features

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -76,9 +76,9 @@
 		font-family: "HelveticaNeue";
 		font-weight: normal; }
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-	h1 { font-size: 42px; line-height: 45px; margin-bottom: 24px;}
-	h2 { font-size: 22px; line-height: 24px; margin-bottom: 18px; color:@darkgrey;}
-	h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
+	h1 { font-size: 42px; line-height: 45px; margin-bottom: 26px;}
+	h2 { font-size: 28px; line-height: 30px; margin-bottom: 18px; }
+	h3 { font-size: 22px; line-height: 24px; margin-bottom: 26px; color:@darkgrey;}
 	h4 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
 	h5 { font-size: 17px; line-height: 24px; }
 	h6 { font-size: 14px; line-height: 21px; }
@@ -101,9 +101,9 @@
 
 	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
 
-	.orange-me {
-		color:#FF7F00;
-	}
+	.orange-me { color:#FF7F00; }
+	.bold-me { font-weight:bold; }
+	.blue-me { color: #003E72; }
 
 /* #Links
 ================================================== */
@@ -125,7 +125,7 @@
 	ol ol, ol ul { margin: 4px 0 5px 30px; font-size: 90%;  }
 	ul ul li, ul ol li,
 	ol ol li, ol ul li { margin-bottom: 6px; }
-	li { line-height: 18px; margin-bottom: 12px; }
+	li { line-height: 18px; margin-bottom: 5px; color:@darkgrey;}
 	ul.large li { line-height: 21px; }
 	li p { line-height: 21px; }
 
