--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -30,6 +30,9 @@
 	/* and (min-width: 768px) */
 	@media only screen and (max-width: 959px) {
 		#swipely-nav { width:768px !important; }
+		.remove-offset { padding-left: 0px !important;}
+		.feature-screenshots { margin-left:20px !important;}
+		div.features { width:768px !important; }
 	}
 
 	/* All Mobile Sizes (devices and browser) */
