--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -82,7 +82,7 @@ footer {
 @vp-width:125px;
 @vp-total-width:@vp-padding * 2 + @vp-width;
 
-.value-prop {
+.value-prop li {
 	float:left;
 	height:135px;
 	width:@vp-width;
