added featured-in div and responsive design to 768px

--- a/stylesheets/layout.less
+++ b/stylesheets/layout.less
@@ -32,7 +32,8 @@
 		#swipely-nav { width:768px !important; }
 		.remove-offset { padding-left: 0px !important;}
 		.feature-screenshots { margin-left:20px !important;}
-		div.features { width:768px !important; }
+		.featured-in, div.features, div.testimonial-container, div.testimonial { width:768px !important; }
+		.featured-in { background-image:url('../images/featured-in-small.jpg') !important; }
 	}
 
 	/* All Mobile Sizes (devices and browser) */
