added form and made cosmetic adjustments

--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -176,6 +176,7 @@ div.center-me {
 	background-color:rgba(255,255,255,1);
 	.border-radius(10px, 10px, 10px, 10px);
 	margin:0 auto;
+	padding-bottom:20px;
 }
 .testimonial {
 	background-image:url("../images/testimonial-bg.png");
