improved the form

--- a/stylesheets/form-style.less
+++ b/stylesheets/form-style.less
@@ -5,8 +5,9 @@ html, body {
 label {
 	font-size: 18px;
 	line-height: 38px;
+	margin-top:25px;
 }
-input#lead-business, input#lead-email {
+#lead-business input, #lead-email input {
 	width: 100%;
 	height: 30px;
 	font-size: 18px;
@@ -26,8 +27,8 @@ section.container {
 	-webkit-border-radius:  10px;
 	-moz-border-radius:  10px;
 	border-radius:  10px;
-
 }
+
 @buttonwidth: 380px;
 a.button.blue {
 	display: table-cell;
@@ -54,6 +55,9 @@ input[type="text"].idleField{
     border-color: #89D700;	
     background: #EFF5FF;
     color: #000000;
+}
+.error {
+	color:#FF7F00;
 }
 
 
