--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -59,6 +59,8 @@ html, body {
 	height:auto;
 	width:@pitch-width;
 	padding:15px;
+	padding-bottom:5px;
+	padding-top:7px;
 	.border-radius(15px, 15px, 15px, 15px);
 	border-style:solid;
 	border-width:2px;
