--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,11 +55,13 @@ body {
 #swipely-nav li {
   float: left;
   color: white;
-  font-weight: bold;
+  /*font-weight:bold;*/
+
 }
 #swipely-nav li {
   line-height: 24px;
   font-size: 15px;
+  font-weight: bold;
   height: 24px;
   float: right;
   margin-right: 10px;
@@ -199,7 +201,7 @@ div.center-me {
   letter-spacing: 1px;
   color: white;
   font-weight: bold;
-  margin: 60px 0px;
+  margin: 50px 0px;
   text-align: center;
 }
 .features li:hover {
@@ -217,7 +219,7 @@ div.center-me {
 .feature-screenshots {
   width: 497px;
   height: 409px;
-  margin: 20px;
+  margin: 0px;
   margin-left: 102px;
   background-image: url("../images/feature-sprite.png");
   background-position: 0 0;
@@ -228,7 +230,7 @@ div.center-me {
   height: 200px;
 }
 .featured-in {
-  height: 110px;
+  height: 170px;
   width: 850px;
   background-color: white;
   -webkit-box-shadow: 0 2px 10px #000000;
@@ -291,10 +293,10 @@ div.center-me {
 }
 .testimonial {
   background-image: url("../images/testimonial-bg.png");
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   width: 850px;
-  height: 250px;
+  height: 380px;
   padding-top: 50px;
   margin: 0 auto;
   text-align: center;
@@ -302,7 +304,7 @@ div.center-me {
 #quote {
   font-size: 34px;
   position: relative;
-  width: 380px;
+  width: 480px;
   margin: 0 auto;
 }
 #source {
