--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -100,11 +100,13 @@ html, body {
 #swipely-nav h3, #swipely-nav li {
 	float:left;
 	color:white;
-	font-weight:bold;
+
+	/*font-weight:bold;*/
 }
 #swipely-nav li {
 	line-height:24px;
 	font-size:15px;
+	font-weight:bold;
 	height:24px;
 	float:right;
 	margin-right:10px;
@@ -184,7 +186,6 @@ html, body {
 	right:0px;
 	margin:0px;
 	padding:0px;
-	
 }
 
 @banner-cycle-width:160px;
@@ -239,7 +240,7 @@ div.center-me {
 	letter-spacing:1px;
 	color:white;
 	font-weight:bold;
-	margin:60px 0px;
+	margin:50px 0px;
 	text-align:center;
 }
 .features li:hover {
@@ -256,7 +257,7 @@ div.center-me {
 .feature-screenshots {
 	width:497px;
 	height:409px;
-	margin:20px;
+	margin:0px;
 	margin-left:102px;
 	background-image:url("../images/feature-sprite.png");
 	background-position: 0 0;
@@ -267,7 +268,7 @@ div.center-me {
 	height:200px;
 }
 .featured-in {
-	height:110px;
+	height:170px;
 	width:850px;
 	background-color:white;
 	.drop-shadow(0, 2px, 10px, 1);
@@ -298,10 +299,10 @@ div.center-me {
 }
 .testimonial {
 	background-image:url("../images/testimonial-bg.png");
-	background-position:center;
+	background-position:top;
 	background-repeat:no-repeat;
 	width:850px;
-	height:250px;
+	height:380px;
 	padding-top:50px;
 	margin: 0 auto;
 	text-align:center;
@@ -309,7 +310,7 @@ div.center-me {
 #quote{
 	font-size:34px;
 	position:relative;
-	width:380px;
+	width:480px;
 	margin: 0 auto;
 }
 #source {
